--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><meta name="description" content="Chase Burr's portfolio"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" crossorigin="anonymous"/><title>Chase Burr</title><script defer="defer" src="main.6a806eceb573cd0e69a7.js"></script></head><body><div id="root"></div><noscript>You need to enable JavaScript to run this app.</noscript></body><script async src="https://www.googletagmanager.com/gtag/js?id=UA-40892824-2"></script><script>window.onscroll = function () {
-               stickyNavbar();
-               activeNavbar();
-          };
-
-          let navbar = document.querySelector(".navbar");
-          let offSet = navbar.offsetTop;
-          let home = document.querySelector(".home");
-          let about = document.querySelector(".about");
-          let portfolio = document.querySelector(".portfolio");
-          let contact = document.querySelector(".nav-contact");
-
-          function stickyNavbar() {
-               if (window.pageYOffset >= offSet) {
-                    navbar.classList.add("sticky");
-               } else {
-                    navbar.classList.remove("sticky");
-               }
-          }
-
-          function activeNavbar() {
-               if (window.pageYOffset >= offSet - 100) {
-                    // Home tab active
-                    home.classList.add("active");
-                    about.classList.remove("active");
-               }
-               if (window.pageYOffset >= offSet) {
-                    // About tab active
-                    about.classList.add("active");
-                    home.classList.remove("active");
-                    portfolio.classList.remove("active");
-                    contact.classList.remove("active");
-               }
-               if (window.pageYOffset >= offSet + 725) {
-                    // portfolio tab active
-                    portfolio.classList.add("active");
-                    about.classList.remove("active");
-               }
-               if (window.pageYOffset >= offSet + 1900) {
-                    // contact tab active
-                    contact.classList.add("active");
-                    portfolio.classList.remove("active");
-               }
-          }</script></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><meta name="description" content="Chase Burr's portfolio"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" crossorigin="anonymous"/><title>Chase Burr</title><script defer="defer" src="main.fea9658abb1ad4664b43.js"></script></head><body><div id="root"></div><noscript>You need to enable JavaScript to run this app.</noscript></body><script async src="https://www.googletagmanager.com/gtag/js?id=UA-40892824-2"></script></html>
